internal/detect/testdata/namer_validator/invalid_signature/with_parameters/main.go
package main

type InvalidName struct{}

func (InvalidName) Name(prefix string) string { return prefix + "name" }

func main() {}
